pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = fcollada.pc

lib_LTLIBRARIES = libfcollada.la

libfcollada_la_CPPFLAGS = $(DEPS_CFLAGS) -DFCOLLADA_DLL -DFCOLLADA_INTERNAL \
 -DNDEBUG -DRETAIL -IFCollada
libfcollada_la_LIBADD = $(DEPS_LIBS)

#for headers: find . -name "*.h" -or -name "*.hpp" | awk '{ ORS=" \\\n"; print; }' manually delete tools and test

#nobase_include_HEADERS
nobase_include_HEADERS = ./FColladaPlugins/FArchiveXML/FAXColladaWriter.h \
./FColladaPlugins/FArchiveXML/StdAfx.h \
./FColladaPlugins/FArchiveXML/FAXColladaParser.h \
./FColladaPlugins/FArchiveXML/FAXStructures.h \
./FColladaPlugins/FArchiveXML/FArchiveXML.h \
./FCollada/FMath/FMAngleAxis.h \
./FCollada/FMath/FMInterpolation.h \
./FCollada/FMath/FMQuaternion.h \
./FCollada/FMath/FMArray.h \
./FCollada/FMath/FMAllocator.h \
./FCollada/FMath/FMath.h \
./FCollada/FMath/StdAfx.h \
./FCollada/FMath/FMRandom.h \
./FCollada/FMath/FMSort.h \
./FCollada/FMath/FMInteger.h \
./FCollada/FMath/FMVolume.h \
./FCollada/FMath/FMArrayPointer.h \
./FCollada/FMath/FMColor.h \
./FCollada/FMath/FMVector3.h \
./FCollada/FMath/FMMatrix44.h \
./FCollada/FMath/FMVector4.h \
./FCollada/FMath/FMVector2.h \
./FCollada/FMath/FMFloat.h \
./FCollada/FMath/FMLookAt.h \
./FCollada/FMath/FMSkew.h \
./FCollada/FMath/FMMatrix33.h \
./FCollada/FMath/FMTree.h \
./FCollada/FColladaPlugin.h \
./FCollada/FUtils/FUXmlParser.h \
./FCollada/FUtils/FUStringBuilder.hpp \
./FCollada/FUtils/FUEvent.h \
./FCollada/FUtils/FUXmlDocument.h \
./FCollada/FUtils/FUFileManager.h \
./FCollada/FUtils/FUPlugin.h \
./FCollada/FUtils/FUDebug.h \
./FCollada/FUtils/FUThread.h \
./FCollada/FUtils/FUDaeEnum.h \
./FCollada/FUtils/FUString.h \
./FCollada/FUtils/FUStringConversion.hpp \
./FCollada/FUtils/FUParameter.hpp \
./FCollada/FUtils/FUtils.h \
./FCollada/FUtils/FUTestBed.h \
./FCollada/FUtils/FUBoundingBox.h \
./FCollada/FUtils/FUUri.h \
./FCollada/FUtils/FUPluginManager.h \
./FCollada/FUtils/Platforms.h \
./FCollada/FUtils/FUParameterizable.h \
./FCollada/FUtils/FUStringConversion.h \
./FCollada/FUtils/FUDateTime.h \
./FCollada/FUtils/FUStringBuilder.h \
./FCollada/FUtils/FUDaeSyntax.h \
./FCollada/FUtils/StdAfx.h \
./FCollada/FUtils/FUFunctor.h \
./FCollada/FUtils/FUFile.h \
./FCollada/FUtils/FUSingleton.h \
./FCollada/FUtils/FUParameter.h \
./FCollada/FUtils/FUAssert.h \
./FCollada/FUtils/FUObjectType.h \
./FCollada/FUtils/FUTracker.h \
./FCollada/FUtils/FUObject.h \
./FCollada/FUtils/FUBase64.h \
./FCollada/FUtils/FUCrc32.h \
./FCollada/FUtils/FUCriticalSection.h \
./FCollada/FUtils/FUError.h \
./FCollada/FUtils/FUUniqueStringMap.h \
./FCollada/FUtils/FUXmlWriter.h \
./FCollada/FUtils/FUSynchronizableObject.h \
./FCollada/FUtils/FUErrorLog.h \
./FCollada/FUtils/FULogFile.h \
./FCollada/FUtils/FUBoundingSphere.h \
./FCollada/FUtils/FUSemaphore.h \
./FCollada/FUtils/FUDaeEnumSyntax.h \
./FCollada/FCDocument/FCDPhysicsScene.h \
./FCollada/FCDocument/FCDEntityInstance.h \
./FCollada/FCDocument/FCDExternalReferenceManager.h \
./FCollada/FCDocument/FCDEmitterInstance.h \
./FCollada/FCDocument/FCDControllerInstance.h \
./FCollada/FCDocument/FCDEmitter.h \
./FCollada/FCDocument/FCDForceGravity.h \
./FCollada/FCDocument/FCDController.h \
./FCollada/FCDocument/FCDGeometryPolygons.h \
./FCollada/FCDocument/FCDParticleModifier.h \
./FCollada/FCDocument/FCDAnimation.h \
./FCollada/FCDocument/FCDAnimationCurveTools.h \
./FCollada/FCDocument/FCDPlaceHolder.h \
./FCollada/FCDocument/FCDGeometryMesh.h \
./FCollada/FCDocument/FCDEffectParameterFactory.h \
./FCollada/FCDocument/FCDGeometryInstance.h \
./FCollada/FCDocument/FCDPhysicsRigidBodyParameters.h \
./FCollada/FCDocument/FCDEffectParameterSurface.h \
./FCollada/FCDocument/FCDVersion.h \
./FCollada/FCDocument/FCDScene.h \
./FCollada/FCDocument/FCDEffectPassState.h \
./FCollada/FCDocument/FCDAnimationKey.h \
./FCollada/FCDocument/FCDForceWind.h \
./FCollada/FCDocument/FCDForceField.h \
./FCollada/FCDocument/FCDSceneNode.h \
./FCollada/FCDocument/FCDEffectCode.h \
./FCollada/FCDocument/FCDEffectTechnique.h \
./FCollada/FCDocument/FCDocument.h \
./FCollada/FCDocument/FCDTargetedEntity.h \
./FCollada/FCDocument/FCDEffectStandard.h \
./FCollada/FCDocument/FCDForceTyped.h \
./FCollada/FCDocument/FCDLight.h \
./FCollada/FCDocument/FCDPhysicsRigidConstraint.h \
./FCollada/FCDocument/FCDPhysicsRigidBodyInstance.h \
./FCollada/FCDocument/FCDAnimationClipTools.h \
./FCollada/FCDocument/FCDObject.h \
./FCollada/FCDocument/FCDParameterAnimatable.hpp \
./FCollada/FCDocument/FCDEffectParameterSampler.h \
./FCollada/FCDocument/FCDTexture.h \
./FCollada/FCDocument/FCDTransform.h \
./FCollada/FCDocument/FCDGeometryPolygonsTools.h \
./FCollada/FCDocument/FCDAnimationClip.h \
./FCollada/FCDocument/FCDPhysicsForceFieldInstance.h \
./FCollada/FCDocument/FCDEffectPassShader.h \
./FCollada/FCDocument/FCDPhysicsRigidBody.h \
./FCollada/FCDocument/FCDEntityReference.h \
./FCollada/FCDocument/FCDAsset.h \
./FCollada/FCDocument/FCDMorphController.h \
./FCollada/FCDocument/FCDAnimationCurve.h \
./FCollada/FCDocument/FCDParticleEmitter.h \
./FCollada/FCDocument/FCDForceDrag.h \
./FCollada/FCDocument/FCDEffect.h \
./FCollada/FCDocument/FCDAnimationMultiCurve.h \
./FCollada/FCDocument/FCDEffectTools.h \
./FCollada/FCDocument/FCDAnimationChannel.h \
./FCollada/FCDocument/FCDExtra.h \
./FCollada/FCDocument/FCDPhysicsMaterial.h \
./FCollada/FCDocument/FCDGeometry.h \
./FCollada/FCDocument/FCDCamera.h \
./FCollada/FCDocument/FCDSceneNodeIterator.h \
./FCollada/FCDocument/FCDMaterialInstance.h \
./FCollada/FCDocument/FCDEmitterObject.h \
./FCollada/FCDocument/FCDSceneNodeIterator.hpp \
./FCollada/FCDocument/FCDPhysicsShape.h \
./FCollada/FCDocument/FCDPhysicsModelInstance.h \
./FCollada/FCDocument/FCDEffectPass.h \
./FCollada/FCDocument/FCDEffectProfile.h \
./FCollada/FCDocument/FCDGeometrySource.h \
./FCollada/FCDocument/FCDLightTools.h \
./FCollada/FCDocument/FCDEffectProfileFX.h \
./FCollada/FCDocument/FCDEntity.h \
./FCollada/FCDocument/FCDObjectWithId.h \
./FCollada/FCDocument/FCDPhysicsModel.h \
./FCollada/FCDocument/FCDLibrary.h \
./FCollada/FCDocument/FCDPhysicsAnalyticalGeometry.h \
./FCollada/FCDocument/FCDocumentTools.h \
./FCollada/FCDocument/FCDGeometrySpline.h \
./FCollada/FCDocument/FCDGeometryNURBSSurface.h \
./FCollada/FCDocument/FCDEffectParameter.h \
./FCollada/FCDocument/FCDImage.h \
./FCollada/FCDocument/FCDGeometryPolygonsInput.h \
./FCollada/FCDocument/FCDForcePBomb.h \
./FCollada/FCDocument/FCDForceDeflector.h \
./FCollada/FCDocument/FCDLibrary.hpp \
./FCollada/FCDocument/FCDEmitterParticle.h \
./FCollada/FCDocument/FCDControllerTools.h \
./FCollada/FCDocument/FCDPhysicsRigidConstraintInstance.h \
./FCollada/FCDocument/FCDParameterAnimatable.h \
./FCollada/FCDocument/FCDSceneNodeTools.h \
./FCollada/FCDocument/FCDMaterial.h \
./FCollada/FCDocument/FCDSkinController.h \
./FCollada/FCDocument/FCDEffectParameter.hpp \
./FCollada/FCDocument/FCDAnimated.h \
./FCollada/StdAfx.h \
./FCollada/FCollada.h

libfcollada_la_SOURCES = ./FColladaPlugins/FArchiveXML/FAXGeometryExport.cpp \
./FColladaPlugins/FArchiveXML/FAXPhysicsImport.cpp \
./FColladaPlugins/FArchiveXML/FAXAnimationImport.cpp \
./FColladaPlugins/FArchiveXML/FAXCameraImport.cpp \
./FColladaPlugins/FArchiveXML/FAXSceneImport.cpp \
./FColladaPlugins/FArchiveXML/FAXColladaParser.cpp \
./FColladaPlugins/FArchiveXML/FAXCameraExport.cpp \
./FColladaPlugins/FArchiveXML/FAXEntityExport.cpp \
./FColladaPlugins/FArchiveXML/FAXEmitterExport.cpp \
./FColladaPlugins/FArchiveXML/FAXControllerImport.cpp \
./FColladaPlugins/FArchiveXML/FAXControllerExport.cpp \
./FColladaPlugins/FArchiveXML/FAXSceneExport.cpp \
./FColladaPlugins/FArchiveXML/FAXImportLinking.cpp \
./FColladaPlugins/FArchiveXML/StdAfx.cpp \
./FColladaPlugins/FArchiveXML/FAXInstanceImport.cpp \
./FColladaPlugins/FArchiveXML/FAXPhysicsExport.cpp \
./FColladaPlugins/FArchiveXML/FAXAnimationExport.cpp \
./FColladaPlugins/FArchiveXML/FAXForceFieldImport.cpp \
./FColladaPlugins/FArchiveXML/FAXGeometryImport.cpp \
./FColladaPlugins/FArchiveXML/FAXColladaWriter.cpp \
./FColladaPlugins/FArchiveXML/FAXMaterialExport.cpp \
./FColladaPlugins/FArchiveXML/FAXMaterialImport.cpp \
./FColladaPlugins/FArchiveXML/FArchiveXML.cpp \
./FColladaPlugins/FArchiveXML/FAXLightImport.cpp \
./FColladaPlugins/FArchiveXML/FAXLightExport.cpp \
./FColladaPlugins/FArchiveXML/FAXEntityImport.cpp \
./FColladaPlugins/FArchiveXML/FAXForceFieldExport.cpp \
./FColladaPlugins/FArchiveXML/FAXInstanceExport.cpp \
./FColladaPlugins/FArchiveXML/FAXEmitterImport.cpp \
./FCollada/FMath/FMInterpolation.cpp \
./FCollada/FMath/FMLookAt.cpp \
./FCollada/FMath/FMAllocator.cpp \
./FCollada/FMath/FMArrayTest.cpp \
./FCollada/FMath/FMTreeTest.cpp \
./FCollada/FMath/StdAfx.cpp \
./FCollada/FMath/FMVolume.cpp \
./FCollada/FMath/FMRandom.cpp \
./FCollada/FMath/FMSkew.cpp \
./FCollada/FMath/FMQuaternion.cpp \
./FCollada/FMath/FMAngleAxis.cpp \
./FCollada/FMath/FMQuaternionTest.cpp \
./FCollada/FMath/FMMatrix33.cpp \
./FCollada/FMath/FMMatrix44.cpp \
./FCollada/FMath/FMColor.cpp \
./FCollada/FMath/FMVector3.cpp \
./FCollada/FColladaPlugin.cpp \
./FCollada/FUtils/FUBoundingTest.cpp \
./FCollada/FUtils/FUXmlDocument.cpp \
./FCollada/FUtils/FUThread.cpp \
./FCollada/FUtils/FUSemaphore.cpp \
./FCollada/FUtils/FUDaeEnum.cpp \
./FCollada/FUtils/FUBase64.cpp \
./FCollada/FUtils/FUBoundingBox.cpp \
./FCollada/FUtils/FUSynchronizableObject.cpp \
./FCollada/FUtils/FUUniqueStringMapTest.cpp \
./FCollada/FUtils/FUFile.cpp \
./FCollada/FUtils/FUPluginManager.cpp \
./FCollada/FUtils/StdAfx.cpp \
./FCollada/FUtils/FUBoundingSphere.cpp \
./FCollada/FUtils/FUFunctorTest.cpp \
./FCollada/FUtils/FUTracker.cpp \
./FCollada/FUtils/FUXmlWriter.cpp \
./FCollada/FUtils/FUStringTest.cpp \
./FCollada/FUtils/FUStringBuilderTest.cpp \
./FCollada/FUtils/FUAssert.cpp \
./FCollada/FUtils/FUStringConversionTest.cpp \
./FCollada/FUtils/FUErrorLog.cpp \
./FCollada/FUtils/FUError.cpp \
./FCollada/FUtils/FUParameter.cpp \
./FCollada/FUtils/FUFileManagerTest.cpp \
./FCollada/FUtils/FUObjectType.cpp \
./FCollada/FUtils/FUCriticalSection.cpp \
./FCollada/FUtils/FULogFile.cpp \
./FCollada/FUtils/FUTestBed.cpp \
./FCollada/FUtils/FUEventTest.cpp \
./FCollada/FUtils/FUXmlParser.cpp \
./FCollada/FUtils/FUStringBuilder.cpp \
./FCollada/FUtils/FUObjectTest.cpp \
./FCollada/FUtils/FUParameterizable.cpp \
./FCollada/FUtils/FUFileManager.cpp \
./FCollada/FUtils/FUCrc32Test.cpp \
./FCollada/FUtils/FUUri.cpp \
./FCollada/FUtils/FUStringConversion.cpp \
./FCollada/FUtils/FUDebug.cpp \
./FCollada/FUtils/FUUniqueStringMap.cpp \
./FCollada/FUtils/FUDateTime.cpp \
./FCollada/FUtils/FUObject.cpp \
./FCollada/FUtils/FUCrc32.cpp \
./FCollada/StdAfx.cpp \
./FCollada/FCDocument/FCDEffectPassShader.cpp \
./FCollada/FCDocument/FCDSceneNodeTools.cpp \
./FCollada/FCDocument/FCDPhysicsRigidBodyParameters.cpp \
./FCollada/FCDocument/FCDAnimationCurveTools.cpp \
./FCollada/FCDocument/FCDEffectProfile.cpp \
./FCollada/FCDocument/FCDGeometry.cpp \
./FCollada/FCDocument/FCDPhysicsRigidBody.cpp \
./FCollada/FCDocument/FCDForceGravity.cpp \
./FCollada/FCDocument/FCDAnimationMultiCurve.cpp \
./FCollada/FCDocument/FCDVersion.cpp \
./FCollada/FCDocument/FCDEffectCode.cpp \
./FCollada/FCDocument/FCDAnimationKey.cpp \
./FCollada/FCDocument/FCDController.cpp \
./FCollada/FCDocument/FCDExternalReferenceManager.cpp \
./FCollada/FCDocument/FCDMaterial.cpp \
./FCollada/FCDocument/FCDAsset.cpp \
./FCollada/FCDocument/FCDAnimation.cpp \
./FCollada/FCDocument/FCDGeometryNURBSSurface.cpp \
./FCollada/FCDocument/FCDPhysicsForceFieldInstance.cpp \
./FCollada/FCDocument/FCDGeometryMesh.cpp \
./FCollada/FCDocument/FCDPhysicsAnalyticalGeometry.cpp \
./FCollada/FCDocument/FCDMaterialInstance.cpp \
./FCollada/FCDocument/FCDObject.cpp \
./FCollada/FCDocument/FCDScene.cpp \
./FCollada/FCDocument/FCDAnimated.cpp \
./FCollada/FCDocument/FCDExtra.cpp \
./FCollada/FCDocument/FCDGeometrySource.cpp \
./FCollada/FCDocument/FCDEffectParameterFactory.cpp \
./FCollada/FCDocument/FCDLight.cpp \
./FCollada/FCDocument/FCDPhysicsScene.cpp \
./FCollada/FCDocument/FCDMorphController.cpp \
./FCollada/FCDocument/FCDEmitterObject.cpp \
./FCollada/FCDocument/FCDGeometryInstance.cpp \
./FCollada/FCDocument/FCDTargetedEntity.cpp \
./FCollada/FCDocument/FCDPhysicsModelInstance.cpp \
./FCollada/FCDocument/FCDForcePBomb.cpp \
./FCollada/FCDocument/FCDEffect.cpp \
./FCollada/FCDocument/FCDEmitter.cpp \
./FCollada/FCDocument/FCDGeometryPolygons.cpp \
./FCollada/FCDocument/FCDAnimationClipTools.cpp \
./FCollada/FCDocument/FCDEffectProfileFX.cpp \
./FCollada/FCDocument/FCDImage.cpp \
./FCollada/FCDocument/FCDEntityInstance.cpp \
./FCollada/FCDocument/FCDEffectTools.cpp \
./FCollada/FCDocument/FCDPhysicsModel.cpp \
./FCollada/FCDocument/FCDAnimationClip.cpp \
./FCollada/FCDocument/FCDPhysicsRigidBodyInstance.cpp \
./FCollada/FCDocument/FCDGeometryPolygonsTools.cpp \
./FCollada/FCDocument/FCDAnimationChannel.cpp \
./FCollada/FCDocument/FCDParticleModifier.cpp \
./FCollada/FCDocument/FCDPlaceHolder.cpp \
./FCollada/FCDocument/FCDPhysicsMaterial.cpp \
./FCollada/FCDocument/FCDCamera.cpp \
./FCollada/FCDocument/FCDPhysicsRigidConstraint.cpp \
./FCollada/FCDocument/FCDSkinController.cpp \
./FCollada/FCDocument/FCDLibrary.cpp \
./FCollada/FCDocument/FCDObjectWithId.cpp \
./FCollada/FCDocument/FCDControllerInstance.cpp \
./FCollada/FCDocument/FCDForceDeflector.cpp \
./FCollada/FCDocument/FCDEffectTechnique.cpp \
./FCollada/FCDocument/FCDEffectParameterSurface.cpp \
./FCollada/FCDocument/FCDocumentTools.cpp \
./FCollada/FCDocument/FCDAnimationCurve.cpp \
./FCollada/FCDocument/FCDEntityReference.cpp \
./FCollada/FCDocument/FCDPhysicsRigidConstraintInstance.cpp \
./FCollada/FCDocument/FCDTexture.cpp \
./FCollada/FCDocument/FCDocument.cpp \
./FCollada/FCDocument/FCDEffectPassState.cpp \
./FCollada/FCDocument/FCDForceWind.cpp \
./FCollada/FCDocument/FCDSceneNode.cpp \
./FCollada/FCDocument/FCDEffectParameter.cpp \
./FCollada/FCDocument/FCDEntity.cpp \
./FCollada/FCDocument/FCDEffectParameterSampler.cpp \
./FCollada/FCDocument/FCDEffectStandard.cpp \
./FCollada/FCDocument/FCDLightTools.cpp \
./FCollada/FCDocument/FCDGeometryPolygonsInput.cpp \
./FCollada/FCDocument/FCDEmitterInstance.cpp \
./FCollada/FCDocument/FCDEmitterParticle.cpp \
./FCollada/FCDocument/FCDGeometrySpline.cpp \
./FCollada/FCDocument/FCDEffectPass.cpp \
./FCollada/FCDocument/FCDSceneNodeIterator.cpp \
./FCollada/FCDocument/FCDForceDrag.cpp \
./FCollada/FCDocument/FCDPhysicsShape.cpp \
./FCollada/FCDocument/FCDControllerTools.cpp \
./FCollada/FCDocument/FCDForceField.cpp \
./FCollada/FCDocument/FCDTransform.cpp \
./FCollada/FCDocument/FCDParameterAnimatable.cpp \
./FCollada/DLLEntry.cpp \
./FCollada/FCollada.cpp



libfcollada_la_LDFLAGS = #-version-info @VERSION@


#from the makefile
#CXXFLAGS := -fvisibility=hidden -W -Wall -Wno-unused-parameter -Wno-unused-function $(OS_DEFINE) $(PIC_FLAGS) $(CPPFLAGS)
#CXXFLAGS_DEBUG := -O0 -g -D_DEBUG -DRETAIL
#CXXFLAGS_RELEASE := -O1 -DNDEBUG -DRETAIL
