find_package(LibXml2 REQUIRED)

include_directories(${FCOLLADA_SOURCE_DIR}/FCollada)

set(FCOLLADA_SOURCES
	FMath/FMInterpolation.cpp
	FMath/FMLookAt.cpp
	FMath/FMAllocator.cpp
	FMath/FMArrayTest.cpp
	FMath/FMTreeTest.cpp
	FMath/StdAfx.cpp
	FMath/FMVolume.cpp
	FMath/FMRandom.cpp
	FMath/FMSkew.cpp
	FMath/FMQuaternion.cpp
	FMath/FMAngleAxis.cpp
	FMath/FMQuaternionTest.cpp
	FMath/FMMatrix33.cpp
	FMath/FMMatrix44.cpp
	FMath/FMColor.cpp
	FMath/FMVector3.cpp
	FColladaPlugin.cpp
	FUtils/FUBoundingTest.cpp
	FUtils/FUXmlDocument.cpp
	FUtils/FUThread.cpp
	FUtils/FUSemaphore.cpp
	FUtils/FUDaeEnum.cpp
	FUtils/FUBase64.cpp
	FUtils/FUBoundingBox.cpp
	FUtils/FUSynchronizableObject.cpp
	FUtils/FUUniqueStringMapTest.cpp
	FUtils/FUFile.cpp
	FUtils/FUPluginManager.cpp
	FUtils/StdAfx.cpp
	FUtils/FUBoundingSphere.cpp
	FUtils/FUFunctorTest.cpp
	FUtils/FUTracker.cpp
	FUtils/FUXmlWriter.cpp
	FUtils/FUStringTest.cpp
	FUtils/FUStringBuilderTest.cpp
	FUtils/FUAssert.cpp
	FUtils/FUStringConversionTest.cpp
	FUtils/FUErrorLog.cpp
	FUtils/FUError.cpp
	FUtils/FUParameter.cpp
	FUtils/FUFileManagerTest.cpp
	FUtils/FUObjectType.cpp
	FUtils/FUCriticalSection.cpp
	FUtils/FULogFile.cpp
	FUtils/FUTestBed.cpp
	FUtils/FUEventTest.cpp
	FUtils/FUXmlParser.cpp
	FUtils/FUStringBuilder.cpp
	FUtils/FUObjectTest.cpp
	FUtils/FUParameterizable.cpp
	FUtils/FUFileManager.cpp
	FUtils/FUCrc32Test.cpp
	FUtils/FUUri.cpp
	FUtils/FUStringConversion.cpp
	FUtils/FUDebug.cpp
	FUtils/FUUniqueStringMap.cpp
	FUtils/FUDateTime.cpp
	FUtils/FUObject.cpp
	FUtils/FUCrc32.cpp
	StdAfx.cpp
	FCDocument/FCDEffectPassShader.cpp
	FCDocument/FCDSceneNodeTools.cpp
	FCDocument/FCDPhysicsRigidBodyParameters.cpp
	FCDocument/FCDAnimationCurveTools.cpp
	FCDocument/FCDEffectProfile.cpp
	FCDocument/FCDGeometry.cpp
	FCDocument/FCDPhysicsRigidBody.cpp
	FCDocument/FCDForceGravity.cpp
	FCDocument/FCDAnimationMultiCurve.cpp
	FCDocument/FCDVersion.cpp
	FCDocument/FCDEffectCode.cpp
	FCDocument/FCDAnimationKey.cpp
	FCDocument/FCDController.cpp
	FCDocument/FCDExternalReferenceManager.cpp
	FCDocument/FCDMaterial.cpp
	FCDocument/FCDAsset.cpp
	FCDocument/FCDAnimation.cpp
	FCDocument/FCDGeometryNURBSSurface.cpp
	FCDocument/FCDPhysicsForceFieldInstance.cpp
	FCDocument/FCDGeometryMesh.cpp
	FCDocument/FCDPhysicsAnalyticalGeometry.cpp
	FCDocument/FCDMaterialInstance.cpp
	FCDocument/FCDObject.cpp
	FCDocument/FCDScene.cpp
	FCDocument/FCDAnimated.cpp
	FCDocument/FCDExtra.cpp
	FCDocument/FCDGeometrySource.cpp
	FCDocument/FCDEffectParameterFactory.cpp
	FCDocument/FCDLight.cpp
	FCDocument/FCDPhysicsScene.cpp
	FCDocument/FCDMorphController.cpp
	FCDocument/FCDEmitterObject.cpp
	FCDocument/FCDGeometryInstance.cpp
	FCDocument/FCDTargetedEntity.cpp
	FCDocument/FCDPhysicsModelInstance.cpp
	FCDocument/FCDForcePBomb.cpp
	FCDocument/FCDEffect.cpp
	FCDocument/FCDEmitter.cpp
	FCDocument/FCDGeometryPolygons.cpp
	FCDocument/FCDAnimationClipTools.cpp
	FCDocument/FCDEffectProfileFX.cpp
	FCDocument/FCDImage.cpp
	FCDocument/FCDEntityInstance.cpp
	FCDocument/FCDEffectTools.cpp
	FCDocument/FCDPhysicsModel.cpp
	FCDocument/FCDAnimationClip.cpp
	FCDocument/FCDPhysicsRigidBodyInstance.cpp
	FCDocument/FCDGeometryPolygonsTools.cpp
	FCDocument/FCDAnimationChannel.cpp
	FCDocument/FCDParticleModifier.cpp
	FCDocument/FCDPlaceHolder.cpp
	FCDocument/FCDPhysicsMaterial.cpp
	FCDocument/FCDCamera.cpp
	FCDocument/FCDPhysicsRigidConstraint.cpp
	FCDocument/FCDSkinController.cpp
	FCDocument/FCDLibrary.cpp
	FCDocument/FCDObjectWithId.cpp
	FCDocument/FCDControllerInstance.cpp
	FCDocument/FCDForceDeflector.cpp
	FCDocument/FCDEffectTechnique.cpp
	FCDocument/FCDEffectParameterSurface.cpp
	FCDocument/FCDocumentTools.cpp
	FCDocument/FCDAnimationCurve.cpp
	FCDocument/FCDEntityReference.cpp
	FCDocument/FCDPhysicsRigidConstraintInstance.cpp
	FCDocument/FCDTexture.cpp
	FCDocument/FCDocument.cpp
	FCDocument/FCDEffectPassState.cpp
	FCDocument/FCDForceWind.cpp
	FCDocument/FCDSceneNode.cpp
	FCDocument/FCDEffectParameter.cpp
	FCDocument/FCDEntity.cpp
	FCDocument/FCDEffectParameterSampler.cpp
	FCDocument/FCDEffectStandard.cpp
	FCDocument/FCDLightTools.cpp
	FCDocument/FCDGeometryPolygonsInput.cpp
	FCDocument/FCDEmitterInstance.cpp
	FCDocument/FCDEmitterParticle.cpp
	FCDocument/FCDGeometrySpline.cpp
	FCDocument/FCDEffectPass.cpp
	FCDocument/FCDSceneNodeIterator.cpp
	FCDocument/FCDForceDrag.cpp
	FCDocument/FCDPhysicsShape.cpp
	FCDocument/FCDControllerTools.cpp
	FCDocument/FCDForceField.cpp
	FCDocument/FCDTransform.cpp
	FCDocument/FCDParameterAnimatable.cpp
	DLLEntry.cpp
	FCollada.cpp
)

add_library(fcollada ${FCOLLADA_SOURCES})

set_target_properties(fcollada PROPERTIES DEBUG_POSTFIX "d")

if(BUILD_SHARED_LIBS)
	target_compile_definitions(fcollada PUBLIC FCOLLADA_DLL)
endif(BUILD_SHARED_LIBS)

target_link_libraries(fcollada PRIVATE farchivexml LibXml2::LibXml2)
